# packagekit-rs

./: .gitignore  .gitmodules  Cargo.toml  Gir.toml  LICENSE  README.md
examples/: example.rs
packagekit-sys/: Cargo.toml  build.rs
packagekit-sys/src/: lib.rs
packagekit-sys/tests/: abi.rs  constant.c  layout.c
src/: lib.rs  main.rs
