[package]
name = "packagekit"
version = "0.1.0"
authors = ["Guillem Castro <guillemcastro4@gmail.com>"]
edition = "2018"

[target.x86_64-unknown-linux-gnu.foo]
rustc-link-lib = ["packagekit-glib2"]
rustc-link-search = ["/usr/lib/x86_64-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packagekit-sys = {path = "./packagekit-sys", features = ["v1_1_13"] }
gio-sys = "0.10.0"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"
libc = "0.2"