[package]
name = "packagekit-sys"
version = "0.0.1"
links = "package_kit_glib"
build = "build.rs"
authors = ["Guillem Castro <guillemcastro4@gmail.com>"]
description = "PackageKit bindings and wrappers for Rust"
license = "MIT"
repository = "https://github.com/GuillemCastro/packagekit-rs"
[package.metadata.system-deps.packagekit_glib2]
name = "packagekit-glib2"
version = "0.0"

[package.metadata.system-deps.packagekit_glib2.feature-versions]
v0_5 = "0.5"
v0_5_2 = "0.5.2"
v0_5_3 = "0.5.3"
v0_5_4 = "0.5.4"
v0_5_5 = "0.5.5"
v0_6 = "0.6"
v0_6_1 = "0.6.1"
v0_6_2 = "0.6.2"
v0_6_3 = "0.6.3"
v0_6_4 = "0.6.4"
v0_6_5 = "0.6.5"
v0_6_10 = "0.6.10"
v0_6_11 = "0.6.11"
v0_6_13 = "0.6.13"
v0_7_2 = "0.7.2"
v0_7_5 = "0.7.5"
v0_8 = "0.8"
v0_8_1 = "0.8.1"
v0_8_2 = "0.8.2"
v0_8_6 = "0.8.6"
v0_8_8 = "0.8.8"
v0_8_11 = "0.8.11"
v0_8_12 = "0.8.12"
v0_8_14 = "0.8.14"
v0_8_16 = "0.8.16"
v0_8_17 = "0.8.17"
v0_9_1 = "0.9.1"
v0_9_5 = "0.9.5"
v0_9_6 = "0.9.6"
v1_0_2 = "1.0.2"
v1_0_10 = "1.0.10"
v1_0_12 = "1.0.12"
v1_1_2 = "1.1.2"
v1_1_8 = "1.1.8"
v1_1_13 = "1.1.13"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "package_kit_glib_sys"

[dependencies]
libc = "0.2"
gio-sys = "0.10.0"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_5 = []
v0_5_2 = ["v0_5"]
v0_5_3 = ["v0_5_2"]
v0_5_4 = ["v0_5_3"]
v0_5_5 = ["v0_5_4"]
v0_6 = ["v0_5_5"]
v0_6_1 = ["v0_6"]
v0_6_2 = ["v0_6_1"]
v0_6_3 = ["v0_6_2"]
v0_6_4 = ["v0_6_3"]
v0_6_5 = ["v0_6_4"]
v0_6_10 = ["v0_6_5"]
v0_6_11 = ["v0_6_10"]
v0_6_13 = ["v0_6_11"]
v0_7_2 = ["v0_6_13"]
v0_7_5 = ["v0_7_2"]
v0_8 = ["v0_7_5"]
v0_8_1 = ["v0_8"]
v0_8_2 = ["v0_8_1"]
v0_8_6 = ["v0_8_2"]
v0_8_8 = ["v0_8_6"]
v0_8_11 = ["v0_8_8"]
v0_8_12 = ["v0_8_11"]
v0_8_14 = ["v0_8_12"]
v0_8_16 = ["v0_8_14"]
v0_8_17 = ["v0_8_16"]
v0_9_1 = ["v0_8_17"]
v0_9_5 = ["v0_9_1"]
v0_9_6 = ["v0_9_5"]
v1_0_2 = ["v0_9_6"]
v1_0_10 = ["v1_0_2"]
v1_0_12 = ["v1_0_10"]
v1_1_2 = ["v1_0_12"]
v1_1_8 = ["v1_1_2"]
v1_1_13 = ["v1_1_8"]
dox = []
